# scanagram

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: masked_self_attention.py
src/scanagram/: __init__.py  api.py  api_util.py  core.py  custom_rules.py  rules.py  test_util.py  util.py
tests/: custom_rule_test.py  custom_scanagram_test.py  lax_test.py
