[project]
name = "scanagram"
version = "0.1.0"
description =  "Rearrange deep scan-like functions in JAX"
authors = [
  { name="Jamie Townsend", email="jamiehntownsend@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
]
